--- a/_posts/2022-08-02-welcome.md
+++ b/_posts/2022-08-02-welcome.md
@@ -3,6 +3,6 @@ layout: post
 title: Welcome!
 ---
 
-Hello and welcome to the new and improved version of my website! This website is a move from the old static website of before, to the new and dynamic website of TailwindCSS. I'm using Harry Wang's Tailpages to be able to run this website using GitHub pages, which is known for not being able to run dynamic frameworks like Django, Flask, and others. 
+Hello and welcome to the new and improved version of my website! This website is a move from the old static website of before, to the new and dynamic website of <a href = "https://tailwindcss.com/">TailwindCSS</a>. I'm using <a href = "https://github.com/harrywang/tailpages">Harry Wang's Tailpages</a> to be able to run this website using GitHub pages, which is known for not being able to run dynamic frameworks like <a href = "https://www.djangoproject.com/">Django</a>, <a href = "https://flask.palletsprojects.com/en/2.2.0/">Flask</a>, and others. 
 
 I welcome you to explore this website and if you have any feedback or questions, don't hesitate to email at <a href = "mailto:2025selsayed@tjhsst.edu">2025selsayed@tjhsst.edu</a>.
