adding a new blog post

--- a/_posts/2022-02-07-code.md
+++ b/_posts/2022-02-07-code.md
@@ -2,6 +2,7 @@
 layout: post
 title: Code Highlighting and Styling
 tags: tutorial open-source
+draft: true
 ---
 
 Code highlighting and styling is based on [highlight.js](https://highlightjs.org/) and TailwindCSS customization.
