edited blog and added links

--- a/_posts/2022-11-08-webmap.md
+++ b/_posts/2022-11-08-webmap.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Making a Web Maps using LeafletJS
+title: Making Web Map using LeafletJS
 ---
 
 As you all know, I am a really curious person, always scavenging the internet to learn something new about the world of tech. Lately, I have been really curious about maps on the internet, I wondered how Google or Bing create these types of maps that millions if not billions of people use every month. I wanted to learn a way to introduce myself to understand how to make web apps, without having previous knowledge of GIS (geographic information system), using a special type of `JavaScript` library called `LeafletJS`.
@@ -9,9 +9,9 @@ As you all know, I am a really curious person, always scavenging the internet to
 
 `LeafletJS` is an open-sourced JS library that is used to make and build web mapping applications. This library allows developers to make tiled web maps without knowing GIS, you only need knowledge of `HTML`, `CSS`, and of course, `JavaScript`! Some major companies and businesses trust `Leaflet`. Some include:
 
-- FourSquare
-- Pinterest
-- Flickr
+- [FourSquare](https://foursquare.com/)
+- [Pinterest](https://www.pinterest.com/)
+- [Flickr](https://www.flickr.com/)
 
 So without a further ado...let's get started!
 
