edited blog images

--- a/_posts/2022-11-08-webmap.md
+++ b/_posts/2022-11-08-webmap.md
@@ -5,7 +5,7 @@ title: Making Web Map using LeafletJS
 
 As you all know, I am a really curious person, always scavenging the internet to learn something new about the world of tech. Lately, I have been really curious about maps on the internet, I wondered how Google or Bing create these types of maps that millions if not billions of people use every month. I wanted to learn a way to introduce myself to understand how to make web apps, without having previous knowledge of GIS (geographic information system), using a special type of `JavaScript` library called `LeafletJS`.
 
-![Google Maps](../assets/img/googlemap.png)
+<img class = "mx-auto w-1/2" src = "{{ site.baseurl }}/assets/img/googlemap.png">
 
 `LeafletJS` is an open-sourced JS library that is used to make and build web mapping applications. This library allows developers to make tiled web maps without knowing GIS, you only need knowledge of `HTML`, `CSS`, and of course, `JavaScript`! Some major companies and businesses trust `Leaflet`. Some include:
 
@@ -19,7 +19,7 @@ So without a further ado...let's get started!
 
 To get started making these web maps, we always gotta start installing all of the important necessities for the project. There are three ways to install the library:
 
-1. If you have `npm` installed:
+### If you have `npm` installed:
 
 ```bash
 npm install leaflet
@@ -27,11 +27,11 @@ npm install leaflet
 
 You will find a copy of the Leaflet release files in `node_modules/leaflet/dist`.
 
-2. Install the package
+### Install the package
 
 If not, install this [package](https://leafletjs-cdn.s3.amazonaws.com/content/leaflet/v1.9.2/leaflet.zip), unzip it, and follow the instructions on this [website](https://leafletjs.com/download.html).
 
-3. Clone the reposittory
+### Clone the reposittory
 
 You can also clone the `Leaflet` repo from GitHub:
 
@@ -77,7 +77,7 @@ The variable `map` is the actual map itself, where I input the coordinates for W
 
 The result that I got was this:
 
-![The result](../assets/img/webappresult.png)
+<img class = "mx-auto w-1/2" src = "{{ site.baseurl }}/assets/img/webappresult.png">
 
 At first, I was pleased with the results. It was straightforward with a bit of help from documentation and people on Stack Overflow (of course), but I think I could add a bit more things to it that would make it ultimate:
 
