--- a/_posts/2022-11-08-webmap.md
+++ b/_posts/2022-11-08-webmap.md
@@ -5,7 +5,7 @@ title: Making Web Map using LeafletJS
 
 As you all know, I am a really curious person, always scavenging the internet to learn something new about the world of tech. Lately, I have been really curious about maps on the internet, I wondered how Google or Bing create these types of maps that millions if not billions of people use every month. I wanted to learn a way to introduce myself to understand how to make web apps, without having previous knowledge of GIS (geographic information system), using a special type of `JavaScript` library called `LeafletJS`.
 
-<img class = "mx-auto w-1/2" src = "{{ site.baseurl }}/assets/img/googlemap.png">
+<img src = "{{ site.baseurl }}/assets/img/googlemap.png" height = "300" />
 
 `LeafletJS` is an open-sourced JS library that is used to make and build web mapping applications. This library allows developers to make tiled web maps without knowing GIS, you only need knowledge of `HTML`, `CSS`, and of course, `JavaScript`! Some major companies and businesses trust `Leaflet`. Some include:
 
@@ -77,7 +77,7 @@ The variable `map` is the actual map itself, where I input the coordinates for W
 
 The result that I got was this:
 
-<img class = "mx-auto w-1/2" src = "{{ site.baseurl }}/assets/img/webappresult.png">
+<img src = "{{ site.baseurl }}/assets/img/webappresult.png" height = "300" />
 
 At first, I was pleased with the results. It was straightforward with a bit of help from documentation and people on Stack Overflow (of course), but I think I could add a bit more things to it that would make it ultimate:
 
